syntax = "proto3";

package authservice;

service AuthService {
  rpc GetPublicKey(GetPublicKeyRequest) returns (GetPublicKeyResponse);
}

message GetPublicKeyRequest {
}

message GetPublicKeyResponse {
  string key = 1;
}