syntax = "proto3";

package userservice;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
  rpc GetUserFriends(GetUserFriendsRequest) returns (GetUserFriendsResponse);
  rpc GetAllFriendships(GetAllFriendshipsRequest) returns (GetAllFriendshipsResponse);
}


message CreateUserRequest {
  string username = 1;
  string fullName = 2;
  string passwordHash = 3;
}

message CreateUserResponse {
  string id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  string id = 1;
  string username = 2;
  string fullName = 3;
  string passwordHash = 4;
}

message GetUserFriendsRequest {
  string  userId = 1;
}

message GetUserFriendsResponse {
  repeated User friends = 1;
}

message GetAllFriendshipsRequest {
}

message GetAllFriendshipsResponse {
  repeated Friendship friendship = 1;
}

message User {
  string userId = 1;
  string username = 2;
  string fullName = 3;
  int64 friendsSince = 4;
}

message Friendship {
  string firstUserId = 1;
  string secondUserId = 2;
  int64 since = 3;
}